grammar.js
    source_file: ($) =>
      repeat(choice($.target_group, $._module_statement, $._statement_seq)),

    _module_statement: ($) =>
      choice(
        $.import,
        $.constant,
        $.external_type,
        $.external_function,
        $.function,
        $.type_definition,
        $.type_alias,
        $.attribute
      ),

    /* Comments */

    module_comment: ($) => prec(3, seq("////", $.doc_comment_content)),

    statement_comment: ($) => prec(2, seq("///", $.doc_comment_content)),

    comment: ($) =>
      choice(
        prec(1, seq("//", /.*/)),

        // `///// ...` looks like a `module_comment`, but it is not
        prec(4, seq("/////", /.*/))
      ),

    /* Target groups
     * DEPRECATED: This syntax was replaced with attributes in v0.30.
     */
    attribute: ($) =>
      seq(
        "@",
        field("name", $.identifier),
        optional(field("arguments", alias($._attribute_arguments, $.arguments)))
      ),

    _attribute_arguments: ($) =>
      seq("(", series_of($.attribute_value, ","), ")"),

    attribute_value: ($) =>
      choice(
        $._constant_value,
        seq(field("label", $.label), ":", field("value", $._constant_value))
      ),

    /* Import statements */
    _constant_value: ($) =>
      choice(
        $.string,
        $.float,
        $.integer,
        alias($._negative_literal, $.integer),
        alias($.constant_tuple, $.tuple),
        alias($.constant_list, $.list),
        alias($._constant_bit_array, $.bit_array),
        alias($.constant_record, $.record),
        alias($.constant_record_update, $.record_update),
        $.identifier,
        alias($.constant_field_access, $.field_access),
        alias($.constant_binary_expression, $.binary_expression),
        alias($.constant_todo, $.todo)
      ),
    function: ($) =>
      prec.right(
        seq(
          optional($.visibility_modifier),
          "fn",
          field("name", $.identifier),
          field("parameters", $.function_parameters),
          optional(seq("->", field("return_type", $._type))),
          optional(field("body", $.block))
        )
      ),
    function_parameters: ($) =>
      seq("(", optional(series_of($.function_parameter, ",")), ")"),
    _statement_seq: ($) => repeat1($._statement),
    _expression: ($) => choice($._expression_unit, $.binary_expression),
    binary_expression: ($) =>
      choice(
        binaryExpr(prec.left, 1, "||", $._expression),
        binaryExpr(prec.left, 2, "&&", $._expression),
        binaryExpr(prec.left, 3, "==", $._expression),
        binaryExpr(prec.left, 3, "!=", $._expression),
        binaryExpr(prec.left, 4, "<", $._expression),
        binaryExpr(prec.left, 4, "<=", $._expression),
        binaryExpr(prec.left, 4, "<.", $._expression),
        binaryExpr(prec.left, 4, "<=.", $._expression),
        binaryExpr(prec.left, 4, ">", $._expression),
        binaryExpr(prec.left, 4, ">=", $._expression),
        binaryExpr(prec.left, 4, ">.", $._expression),
        binaryExpr(prec.left, 4, ">=.", $._expression),
        binaryExpr(prec.left, 5, "<>", $._expression),
        binaryExpr(
          prec.left,
          6,
          "|>",
          $._expression,
          choice($.pipeline_echo, $._expression)
        ),
        binaryExpr(prec.left, 7, "+", $._expression),
        binaryExpr(prec.left, 7, "+.", $._expression),
        binaryExpr(prec.left, 7, "-", $._expression),
        binaryExpr(prec.left, 7, "-.", $._expression),
        binaryExpr(prec.left, 8, "*", $._expression),
        binaryExpr(prec.left, 8, "*.", $._expression),
        binaryExpr(prec.left, 8, "/", $._expression),
        binaryExpr(prec.left, 8, "/.", $._expression),
        binaryExpr(prec.left, 8, "%", $._expression)
      ),
    // The way that this function is written in the Gleam parser is essentially
    // incompatible with tree-sitter. It first parses some base expression,
    // then potentially parses tuple access, field access, record updates, or
    // function calls as an extension of that base expression that was
    // previously parsed. tree-sitter provides no facility to amend a node that
    // was already successfully parsed. Therefore, tuple access, field access,
    // record updates, and function calls must be parsed as alternatives to the
    // expressions they build upon rather than extensions thereof.
    todo: ($) =>
      prec.left(
        seq(
          "todo",
          optional(
            choice(
              // DEPRECATED: The 'as' syntax was introduced in v0.30.
              seq("(", field("message", $.string), ")"),
              seq("as", field("message", $._expression))
            )
          )
        )
      ),
    _maybe_record_expression: ($) =>
      choice(
        $.record,
        $.identifier,
        $.function_call,
        $.block,
        $.case,
        $.record_update,
        $.field_access,
        $.tuple_access
      ),
    field_access: ($) =>
      prec.left(
        seq(
          field("record", $._maybe_record_expression),
          ".",
          field("field", $.label)
        )
      ),
    // Remote functions (e.g. int.to_string) is parsed as a field access
    // (accessing field to_string on record int) as it is impossible for the
    // parser to determine with int is a module (and thus to_string a member
    // function) or a local variable containing a record (and thus to_string is
    // a field of that record).
    // Similarly, the function name in local function calls (e.g. foo(arg)) is
    // parsed as an $.identifier which is used to refer to both local variables
    // and module functions, embodying the same ambiguity.
    arguments: ($) => seq("(", optional(series_of($.argument, ",")), ")"),
    visibility_modifier: ($) => "pub",
    string: ($) =>
      seq(
        '"',
        repeat(choice($.escape_sequence, $.quoted_content)),
        token.immediate('"')
      ),
    _type: ($) =>
      choice($.type_hole, $.tuple_type, $.function_type, $.type, $.type_var),
    identifier: ($) => $._name,
    label: ($) => $._name,
    _name: ($) => /[_a-z][_0-9a-z]*/,
