test/corpus/attributes.txt
================================================================================
Target attribute
================================================================================

@target(erlang)
pub fn main() { todo }

--------------------------------------------------------------------------------

(source_file
  (function
    (attribute
      name: (identifier)
      arguments: (arguments
        (attribute_value
          (identifier))))
    (visibility_modifier)
    name: (identifier)
    parameters: (function_parameters)
    body: (function_body
      (todo))))

================================================================================
Attribute with multiple values
================================================================================

@deprecated(since: "1.2.0", replacement: wobble)
pub fn wibble() { todo }

--------------------------------------------------------------------------------

(source_file
  (function
    (attribute
      name: (identifier)
      arguments: (arguments
        (attribute_value
          label: (label)
          value: (string
            (quoted_content)))
        (attribute_value
          label: (label)
          value: (identifier))))
    (visibility_modifier)
    name: (identifier)
    parameters: (function_parameters)
    body: (function_body
      (todo))))
