test/corpus/pipes.txt
================================================================================
Pipes
================================================================================

string
|> iodata.new
|> iodata.reverse

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (binary_expression
      (identifier)
      (field_access
        (identifier)
        (label)))
    (field_access
      (identifier)
      (label))))

================================================================================
Pipe and concat (#149)
================================================================================

value |> to_string <> "foo"

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (binary_expression
      (identifier)
      (identifier))
    (string
      (quoted_content))))
